--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.html",
   "scripts": {
     "test": "jest --config=jest.config.js",
-    "start": "http-server . -c-1"
+    "start": "yarn serve -s"
   },
   "author": "Soohyun Kim",
   "license": "ISC",
@@ -14,6 +14,7 @@
     "@babel/preset-env": "^7.18.10",
     "babel-jest": "^28.1.3",
     "http-server": "^14.1.1",
-    "jest": "^28.1.3"
+    "jest": "^28.1.3",
+    "serve": "^14.0.1"
   }
 }
